--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "crnmn-website",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.3",
@@ -54,7 +60,46 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.0",
     "vaul": "^1.1.2",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "zustand": "^4.5.5",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
+    "immer": "^10.1.1",
+    "@tanstack/react-virtual": "^3.10.8",
+    "react-lazy-load-image-component": "^1.6.2",
+    "intersection-observer": "^0.12.2",
+    "web-vitals": "^4.2.4",
+    "socket.io-client": "^4.8.1",
+    "pusher-js": "^8.4.0",
+    "helmet": "^8.0.0",
+    "cors": "^2.8.5",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "react-ga4": "^2.1.0",
+    "workbox-window": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "pwacompat": "^2.0.17",
+    "@stripe/stripe-js": "^4.9.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "ethers": "^6.13.4",
+    "web3": "^4.16.0",
+    "three": "^0.170.0",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.122.0",
+    "framer-motion": "^11.11.17",
+    "react-i18next": "^15.1.3",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "@hookform/resolvers": "^3.9.0",
+    "zod": "^3.23.8",
+    "yup": "^1.4.0",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "axios": "^1.7.7",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -64,6 +109,52 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "cypress": "^13.15.2",
+    "@cypress/react": "^9.0.0",
+    "@cypress/vite-dev-server": "^5.1.0",
+    "eslint": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "prettier": "^3.3.3",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "vite-bundle-analyzer": "^0.7.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^0.20.5",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.13",
+    "@types/three": "^0.170.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": [
+    "react",
+    "typescript",
+    "vite",
+    "pwa",
+    "ecommerce",
+    "ai",
+    "blockchain",
+    "mobile",
+    "realtime",
+    "advanced"
+  ],
+  "author": "CRNMN Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cornmankl/CRNMN-Website.git"
   }
 }
