--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,98 +43,98 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.16.8",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.9.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
+    "@tanstack/react-virtual": "^3.10.8",
     "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.13.4",
+    "express-validator": "^7.2.0",
+    "firebase": "^12.2.1",
+    "framer-motion": "^11.11.17",
+    "helmet": "^8.0.0",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "immer": "^10.1.1",
     "input-otp": "^1.4.2",
+    "intersection-observer": "^0.12.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "pusher-js": "^8.4.0",
+    "pwacompat": "^2.0.17",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.1.3",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.0",
+    "three": "^0.170.0",
     "vaul": "^1.1.2",
     "vite": "^5.4.19",
-    "zustand": "^4.5.5",
-    "@tanstack/react-query": "^5.59.20",
-    "@tanstack/react-query-devtools": "^5.59.20",
-    "immer": "^10.1.1",
-    "@tanstack/react-virtual": "^3.10.8",
-    "react-lazy-load-image-component": "^1.6.2",
-    "intersection-observer": "^0.12.2",
     "web-vitals": "^4.2.4",
-    "socket.io-client": "^4.8.1",
-    "pusher-js": "^8.4.0",
-    "helmet": "^8.0.0",
-    "cors": "^2.8.5",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "react-ga4": "^2.1.0",
-    "workbox-window": "^7.3.0",
+    "web3": "^4.16.0",
+    "workbox-expiration": "^7.3.0",
     "workbox-routing": "^7.3.0",
     "workbox-strategies": "^7.3.0",
-    "workbox-expiration": "^7.3.0",
-    "pwacompat": "^2.0.17",
-    "@stripe/stripe-js": "^4.9.0",
-    "@stripe/react-stripe-js": "^2.8.0",
-    "ethers": "^6.13.4",
-    "web3": "^4.16.0",
-    "three": "^0.170.0",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/drei": "^9.122.0",
-    "framer-motion": "^11.11.17",
-    "react-i18next": "^15.1.3",
-    "i18next": "^25.4.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "@hookform/resolvers": "^3.9.0",
-    "zod": "^3.23.8",
+    "workbox-window": "^7.3.0",
     "yup": "^1.4.0",
-    "date-fns": "^3.6.0",
-    "lodash": "^4.17.21",
-    "axios": "^1.7.7",
-    "react-helmet-async": "^2.0.5"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.0",
+    "@cypress/vite-dev-server": "^5.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.5.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@types/jest": "^29.5.14",
-    "cypress": "^13.15.2",
-    "@cypress/react": "^9.0.0",
-    "@cypress/vite-dev-server": "^5.1.0",
-    "eslint": "^8.57.1",
+    "@types/three": "^0.170.0",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
-    "prettier": "^3.3.3",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "autoprefixer": "^10.4.16",
+    "cypress": "^13.15.2",
+    "eslint": "^8.57.1",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.4.32",
+    "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "vite-bundle-analyzer": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-pwa": "^0.20.5",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/lodash": "^4.17.13",
-    "@types/three": "^0.170.0"
+    "vite-plugin-pwa": "^0.20.5"
   },
   "engines": {
     "node": ">=18.0.0",
