--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.60.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -52,6 +54,7 @@
     "@tanstack/react-query-devtools": "^5.59.20",
     "@tanstack/react-virtual": "^3.10.8",
     "@vitejs/plugin-react": "^4.2.1",
+    "ai": "^5.0.28",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -74,6 +77,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "openai": "^5.16.0",
     "pusher-js": "^8.4.0",
     "pwacompat": "^2.0.17",
     "react": "^18.3.1",
@@ -84,8 +88,11 @@
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.1.3",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.0",
@@ -112,7 +119,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.11",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/three": "^0.170.0",
@@ -123,6 +130,7 @@
     "cypress": "^13.15.2",
     "eslint": "^8.57.1",
     "husky": "^9.1.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
@@ -130,6 +138,7 @@
     "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.3.3",
     "vite-bundle-analyzer": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
