--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build && node scripts/analyze-bundle.js",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "e2e": "cypress run",
     "e2e:open": "cypress open",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "analyze": "node scripts/analyze-bundle.js",
+    "performance": "npm run build && npm run analyze",
+    "clean": "rm -rf dist node_modules/.vite",
+    "precommit": "npm run lint && npm run type-check && npm run test"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.60.0",
